# x/swap/types/params.go
@@ -7,6 +7,7 @@ import (
 const (
 	ModuleName   = "swap"
 	StoreKey     = ModuleName
+	RouterKey    = ModuleName
 	DefaultDenom = "upaxi"
 )
 
@@ -14,8 +15,9 @@ var KeyParams = []byte("swap_params")
 
 // Params defines spam protection parameters for the Paxi blockchain.
 type Params struct {
-	CodeID     uint64 `json:"code_id" yaml:"code_id"`
-	SwapFeeBPS uint64 `json:"swap_fee_bps" yaml:"swap_fee_bps"`
+	CodeID        uint64 `json:"code_id" yaml:"code_id"`
+	SwapFeeBPS    uint64 `json:"swap_fee_bps" yaml:"swap_fee_bps"`
+	MinLidquidity uint64 `json:"min_liquidity" yaml:"min_liquidity"`
 }
 
 type GenesisState struct {
@@ -34,8 +36,9 @@ func (gs GenesisState) Validate() error {
 
 func DefaultParams() Params {
 	return Params{
-		CodeID:     1,  // Default code ID for prc-20 contracts
-		SwapFeeBPS: 40, // 0.4%
+		CodeID:        1,         // Default code ID for prc-20 contracts
+		SwapFeeBPS:    40,        // 0.4%
+		MinLidquidity: 1_000_000, // 1 Paxi
 	}
 }
 
@@ -45,6 +48,9 @@ func (p Params) Validate() error {
 	}
 	if p.CodeID == 0 {
 		return fmt.Errorf("code ID must be greater than 0")
+	}
+	if p.MinLidquidity <= 0 {
+		return fmt.Errorf("min liquidity must be greater than 0")
 	}
 	return nil
 }
