# x/swap/types/query.pb.go
@@ -66,8 +66,9 @@ func (m *QueryParamsRequest) XXX_DiscardUnknown() {
 var xxx_messageInfo_QueryParamsRequest proto.InternalMessageInfo
 
 type QueryParamsResponse struct {
-	CodeId     uint64 `protobuf:"varint,1,opt,name=code_id,json=codeId,proto3" json:"code_id,omitempty"`
-	SwapFeeBps uint64 `protobuf:"varint,2,opt,name=swap_fee_bps,json=swapFeeBps,proto3" json:"swap_fee_bps,omitempty"`
+	CodeId       uint64 `protobuf:"varint,1,opt,name=code_id,json=codeId,proto3" json:"code_id,omitempty"`
+	SwapFeeBps   uint64 `protobuf:"varint,2,opt,name=swap_fee_bps,json=swapFeeBps,proto3" json:"swap_fee_bps,omitempty"`
+	MinLiquidity uint64 `protobuf:"varint,3,opt,name=min_liquidity,json=minLiquidity,proto3" json:"min_liquidity,omitempty"`
 }
 
 func (m *QueryParamsResponse) Reset()         { *m = QueryParamsResponse{} }
@@ -117,6 +118,13 @@ func (m *QueryParamsResponse) GetSwapFeeBps() uint64 {
 	return 0
 }
 
+func (m *QueryParamsResponse) GetMinLiquidity() uint64 {
+	if m != nil {
+		return m.MinLiquidity
+	}
+	return 0
+}
+
 func init() {
 	proto.RegisterType((*QueryParamsRequest)(nil), "x.swap.types.QueryParamsRequest")
 	proto.RegisterType((*QueryParamsResponse)(nil), "x.swap.types.QueryParamsResponse")
@@ -125,26 +133,27 @@ func init() {
 func init() { proto.RegisterFile("x/swap/types/query.proto", fileDescriptor_a2d99eab97db96eb) }
 
 var fileDescriptor_a2d99eab97db96eb = []byte{
-	// 295 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x7c, 0x90, 0xc1, 0x4a, 0x33, 0x31,
-	0x14, 0x85, 0x3b, 0xe5, 0xff, 0x2b, 0x84, 0x6e, 0x4c, 0x05, 0x6b, 0x91, 0x50, 0xbb, 0x10, 0x37,
-	0x26, 0xd4, 0xbe, 0x80, 0x74, 0x21, 0xb8, 0xab, 0x5d, 0xba, 0x29, 0xc9, 0xf4, 0xda, 0x06, 0xec,
-	0xdc, 0xb4, 0x37, 0xb5, 0xd3, 0xad, 0x4f, 0x20, 0xf8, 0x52, 0x2e, 0x0b, 0x6e, 0x5c, 0xca, 0x8c,
-	0x0f, 0x22, 0x93, 0x6c, 0x2a, 0x82, 0xcb, 0x9c, 0x73, 0xf2, 0x71, 0xee, 0x61, 0xed, 0x5c, 0xd1,
-	0x46, 0x3b, 0xe5, 0xb7, 0x0e, 0x48, 0x2d, 0xd7, 0xb0, 0xda, 0x4a, 0xb7, 0x42, 0x8f, 0xbc, 0x99,
-	0xcb, 0xca, 0x91, 0xc1, 0xe9, 0x88, 0x14, 0x69, 0x81, 0xa4, 0x8c, 0x26, 0x50, 0x4f, 0x7d, 0x03,
-	0x5e, 0xf7, 0x55, 0x8a, 0x36, 0x8b, 0xe9, 0xce, 0xe9, 0x0c, 0x71, 0xf6, 0x08, 0x4a, 0x3b, 0xab,
-	0x74, 0x96, 0xa1, 0xd7, 0xde, 0x62, 0x46, 0xd1, 0xed, 0x1d, 0x31, 0x7e, 0x57, 0xa1, 0x47, 0x7a,
-	0xa5, 0x17, 0x34, 0x86, 0xe5, 0x1a, 0xc8, 0xf7, 0x46, 0xac, 0xf5, 0x43, 0x25, 0x87, 0x19, 0x01,
-	0x3f, 0x66, 0x07, 0x29, 0x4e, 0x61, 0x62, 0xa7, 0xed, 0xa4, 0x9b, 0x5c, 0xfc, 0x1b, 0x37, 0xaa,
-	0xe7, 0xed, 0x94, 0x77, 0x59, 0xb3, 0x6a, 0x34, 0x79, 0x00, 0x98, 0x18, 0x47, 0xed, 0x7a, 0x70,
-	0x59, 0xa5, 0xdd, 0x00, 0x0c, 0x1d, 0x5d, 0x2d, 0xd9, 0xff, 0x40, 0xe4, 0x73, 0xd6, 0x88, 0x54,
-	0xde, 0x95, 0xfb, 0x77, 0xc8, 0xdf, 0x35, 0x3a, 0x67, 0x7f, 0x24, 0x62, 0xa5, 0xde, 0xc9, 0xf3,
-	0xfb, 0xd7, 0x6b, 0xbd, 0xc5, 0x0f, 0x95, 0xd3, 0xb9, 0x8d, 0x8b, 0xb9, 0x10, 0x19, 0x5e, 0xbf,
-	0x15, 0x22, 0xd9, 0x15, 0x22, 0xf9, 0x2c, 0x44, 0xf2, 0x52, 0x8a, 0xda, 0xae, 0x14, 0xb5, 0x8f,
-	0x52, 0xd4, 0xee, 0xcf, 0x67, 0xd6, 0xcf, 0xd7, 0x46, 0xa6, 0xb8, 0x08, 0xdf, 0x2e, 0x37, 0x60,
-	0x06, 0x11, 0xb0, 0x3f, 0xba, 0x69, 0x84, 0x8d, 0x06, 0xdf, 0x01, 0x00, 0x00, 0xff, 0xff, 0x68,
-	0xa4, 0xe9, 0xe5, 0x8b, 0x01, 0x00, 0x00,
+	// 319 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x7c, 0x91, 0xc1, 0x4a, 0x03, 0x31,
+	0x14, 0x45, 0x3b, 0x55, 0x2b, 0x84, 0xba, 0x30, 0x15, 0x1c, 0x8b, 0x84, 0x5a, 0x41, 0xdc, 0x38,
+	0xa1, 0xf6, 0x07, 0xa4, 0x0b, 0x41, 0x70, 0xa1, 0x5d, 0xba, 0x19, 0x32, 0x33, 0xcf, 0x36, 0xd0,
+	0x49, 0x32, 0x7d, 0x19, 0xdb, 0x6e, 0xfd, 0x02, 0xc1, 0x9f, 0x72, 0x59, 0x70, 0xe3, 0x52, 0x5a,
+	0x3f, 0x44, 0x26, 0x41, 0xa8, 0x08, 0x2e, 0x73, 0xef, 0xc9, 0x7b, 0x37, 0x37, 0x24, 0x9c, 0x73,
+	0x9c, 0x09, 0xc3, 0xed, 0xc2, 0x00, 0xf2, 0xa2, 0x84, 0xe9, 0x22, 0x32, 0x53, 0x6d, 0x35, 0x6d,
+	0xce, 0xa3, 0xca, 0x89, 0x9c, 0xd3, 0x66, 0xa9, 0xc6, 0x5c, 0x23, 0x4f, 0x04, 0x02, 0x7f, 0xea,
+	0x25, 0x60, 0x45, 0x8f, 0xa7, 0x5a, 0x2a, 0x4f, 0xb7, 0x8f, 0x47, 0x5a, 0x8f, 0x26, 0xc0, 0x85,
+	0x91, 0x5c, 0x28, 0xa5, 0xad, 0xb0, 0x52, 0x2b, 0xf4, 0x6e, 0xf7, 0x80, 0xd0, 0xfb, 0x6a, 0xf4,
+	0x9d, 0x98, 0x8a, 0x1c, 0x87, 0x50, 0x94, 0x80, 0xb6, 0x5b, 0x92, 0xd6, 0x2f, 0x15, 0x8d, 0x56,
+	0x08, 0xf4, 0x90, 0xec, 0xa6, 0x3a, 0x83, 0x58, 0x66, 0x61, 0xd0, 0x09, 0xce, 0xb7, 0x87, 0x8d,
+	0xea, 0x78, 0x93, 0xd1, 0x0e, 0x69, 0x56, 0x89, 0xe2, 0x47, 0x80, 0x38, 0x31, 0x18, 0xd6, 0x9d,
+	0x4b, 0x2a, 0xed, 0x1a, 0x60, 0x60, 0x90, 0x9e, 0x92, 0xbd, 0x5c, 0xaa, 0x78, 0x22, 0x8b, 0x52,
+	0x66, 0xd2, 0x2e, 0xc2, 0x2d, 0x87, 0x34, 0x73, 0xa9, 0x6e, 0x7f, 0xb4, 0xcb, 0x82, 0xec, 0xb8,
+	0xb5, 0x74, 0x4c, 0x1a, 0x7e, 0x35, 0xed, 0x44, 0x9b, 0x8f, 0x8d, 0xfe, 0x66, 0x6d, 0x9f, 0xfc,
+	0x43, 0xf8, 0xdc, 0xdd, 0xa3, 0xe7, 0xf7, 0xaf, 0xd7, 0x7a, 0x8b, 0xee, 0x73, 0x23, 0xe6, 0xd2,
+	0xd7, 0x6a, 0x1c, 0x32, 0xb8, 0x7a, 0x5b, 0xb1, 0x60, 0xb9, 0x62, 0xc1, 0xe7, 0x8a, 0x05, 0x2f,
+	0x6b, 0x56, 0x5b, 0xae, 0x59, 0xed, 0x63, 0xcd, 0x6a, 0x0f, 0x67, 0x23, 0x69, 0xc7, 0x65, 0x12,
+	0xa5, 0x3a, 0x77, 0xd7, 0x2e, 0x66, 0x90, 0xf4, 0xfd, 0x80, 0xcd, 0x9f, 0x49, 0x1a, 0xae, 0xc8,
+	0xfe, 0x77, 0x00, 0x00, 0x00, 0xff, 0xff, 0x49, 0x95, 0x86, 0xca, 0xb0, 0x01, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
@@ -271,6 +280,11 @@ func (m *QueryParamsResponse) MarshalToSizedBuffer(dAtA []byte) (int, error) {
 	_ = i
 	var l int
 	_ = l
+	if m.MinLiquidity != 0 {
+		i = encodeVarintQuery(dAtA, i, uint64(m.MinLiquidity))
+		i--
+		dAtA[i] = 0x18
+	}
 	if m.SwapFeeBps != 0 {
 		i = encodeVarintQuery(dAtA, i, uint64(m.SwapFeeBps))
 		i--
@@ -315,6 +329,9 @@ func (m *QueryParamsResponse) Size() (n int) {
 	}
 	if m.SwapFeeBps != 0 {
 		n += 1 + sovQuery(uint64(m.SwapFeeBps))
+	}
+	if m.MinLiquidity != 0 {
+		n += 1 + sovQuery(uint64(m.MinLiquidity))
 	}
 	return n
 }
@@ -438,6 +455,25 @@ func (m *QueryParamsResponse) Unmarshal(dAtA []byte) error {
 				b := dAtA[iNdEx]
 				iNdEx++
 				m.SwapFeeBps |= uint64(b&0x7F) << shift
+				if b < 0x80 {
+					break
+				}
+			}
+		case 3:
+			if wireType != 0 {
+				return fmt.Errorf("proto: wrong wireType = %d for field MinLiquidity", wireType)
+			}
+			m.MinLiquidity = 0
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return ErrIntOverflowQuery
+				}
+				if iNdEx >= l {
+					return io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				m.MinLiquidity |= uint64(b&0x7F) << shift
 				if b < 0x80 {
 					break
 				}
